Code cleanup and initial data loading

--- a/provision/roles/liberator/tasks/main.yml
+++ b/provision/roles/liberator/tasks/main.yml
@@ -23,3 +23,9 @@
   command: python3 manage.py migrate
   args:
     chdir: /vagrant
+
+- name: load initial data
+  sudo: yes
+  command: python3 manage.py loaddata init
+  args:
+    chdir: /vagrant
