--- a/provision/site.yml
+++ b/provision/site.yml
@@ -1,6 +1,7 @@
-- name: DokuWiki
+- name: Liberator
   hosts: all
   pre_tasks:
     - include: roles/common/pre_tasks/main.yml
   roles:
     - dokuwiki
+    - liberator
