--- a/provision/roles/postgresql/tasks/main.yml
+++ b/provision/roles/postgresql/tasks/main.yml
@@ -1,6 +1,14 @@
 ---
-- name: install postgresql
+- name: install postgresql packages
   sudo: yes
+  with_items: postgresql_packages
   apt:
-    pkg: postgresql
+    pkg: "{{ item.name }}"
     state: latest
+
+- name: start postgresql
+  sudo: yes
+  service:
+    name: postgresql
+    enabled: yes
+    state: started
