Grant CREATEDB permission for django user

--- a/provision/roles/liberator/tasks/main.yml
+++ b/provision/roles/liberator/tasks/main.yml
@@ -32,6 +32,7 @@
     name: liberator
     password: liberator
     db: liberator
+    role_attr_flags: "CREATEDB"
 
 - name: configure liberator
   template:
