--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 django
 django-cors-headers
 djangorestframework
-git+https://github/fantastic001/djangorestframework-jwt
+git+https://github.com/fantastic001/django-rest-framework-jwt
 djangorestframework-jwt
 psycopg2
