--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ django
 django-cors-headers
 djangorestframework
 git+https://github.com/mekanix/drf-extensions
-git+https://github.com/fantastic001/django-rest-framework-jwt
+django-rest-framework-jwt
 psycopg2
