Fixing wrong name in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ django
 django-cors-headers
 djangorestframework
 git+https://github.com/mekanix/drf-extensions
-django-rest-framework-jwt
+djangorestframework-jwt
 psycopg2
