--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 django<1.8
 django-cors-headers
 djangorestframework
-git+https://github.com/mekanix/drf-extensions
+drf-extensions
 djangorestframework-jwt
 psycopg2
 drf-nested-routers
