--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,12 @@ db:
 web:
     build: .
     command: python3 manage.py runserver 0.0.0.0:8000
+    #command: sh bin/production.sh 9005
     volumes:
         - .:/code
     ports:
         - "8000:8000"
+	#- "9005:9005"
     links:
         - db
     environment:
