--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,11 @@ web:
     build: .
     command: python3 manage.py runserver 0.0.0.0:8000
     #command: sh bin/production.sh 9005
+    # Add - "9005:9005" ports for production
     volumes:
         - .:/code
     ports:
         - "8000:8000"
-	#- "9005:9005"
     links:
         - db
     environment:
